# tauri

.github/workflows/: tauri-build.yml
tauri-app/: package-lock.json  package.json
tauri-app/.github/workflows/: tauri-build.yml
tauri-app/src/: App.vue  main.js
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/src/: lib.rs  main.rs
tauri-app/src/components/: CrossMap.vue  TopMenu.vue  phase.vue
tauri-app/src/router/: index.js
tauri-app/src/utils/: cross-util.js
tauri-app/src/views/: 1049BatchParamCheck.vue  Browser.vue  GBParamBatchCheck.vue  GBParamCheck.vue  Login.vue  ParameterCheck.vue  mqtt.vue
